--- a/index.html
+++ b/index.html
@@ -1,27 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Starmy World</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+<html>
+<head><title>Giriş / Kayıt</title></head>
 <body>
-    <header>
-        <h1>Welcome to Starmy World</h1>
-    </header>
-    <section>
-        <p>This is a simple site created for Starmy World.</p>
-        <button id="join-button">Join Us</button>
-    </section>
-    <footer>
-        <p>&copy; 2025 Starmy World. All rights reserved.</p>
-    </footer>
+  <h2>Kayıt Ol</h2>
+  <form action="/register" method="POST">
+    <input name="username" placeholder="Kullanıcı Adı" required>
+    <input type="password" name="password" placeholder="Şifre" required>
+    <button type="submit">Kayıt</button>
+  </form>
 
-    <script>
-        document.getElementById('join-button').addEventListener('click', function() {
-            alert("Thank you for joining Starmy World!");
-        });
-    </script>
+  <h2>Giriş Yap</h2>
+  <form action="/login" method="POST">
+    <input name="username" placeholder="Kullanıcı Adı" required>
+    <input type="password" name="password" placeholder="Şifre" required>
+    <button type="submit">Giriş</button>
+  </form>
 </body>
 </html>
